# damn-simple-invoicing

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: architecture.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_seed_settings.sql  0003_seed_reporting_currency.sql
src-tauri/src/: error.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: mod.rs  pdf.rs
src/lib/api/: tauri.ts
src/lib/components/: AppShell.svelte  EmptyState.svelte  ErrorOverlay.svelte  MetricCard.svelte  MoneyValue.svelte  SectionCard.svelte  StatusBadge.svelte
src/lib/stores/: settings.ts
src/lib/types/: domain.ts
src/lib/utils/: errors.ts  money.ts  path.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/business/: +page.svelte
src/routes/clients/: +page.svelte
src/routes/invoices/: +page.svelte
src/routes/payments/: +page.svelte
src/routes/reports/: +page.svelte
src/routes/settings/: +page.svelte
