[package]
name = "damn-simple-invoicing"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
csv = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
thiserror = "2"
url = "2"
zip = "0.6"
